# VieNeu-TTS

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.vps  README.deploy.md  README.md  README.vi.md  README_PYPI.md  config.yaml  docker-compose.cpu.yml  docker-compose.dev.yaml  docker-compose.localtest.yaml  docker-compose.pg.yaml  docker-compose.vps.yaml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
apps/: gradio_main.py  ui_constants.py
apps/api/: __init__.py  model_manager.py  schemas.py  server.py
apps/demo/: app.js  index.html
backend-model/: .dockerignore  .env.example  Dockerfile.gpu  pyproject.toml
backend-model/model_server/: __init__.py  app.py  config.py  engine.py  storage.py
backend-vps/: .dockerignore  .env.example  Dockerfile.vps  pyproject.toml
backend-vps/app/: __init__.py  config.py  database.py  main.py  models.py
backend-vps/app/api/: __init__.py  catalog.py  health.py  tts.py  voices.py
backend-vps/app/repositories/: __init__.py  job_repository.py
backend-vps/app/services/: __init__.py  catalog_service.py  job_service.py  model_client.py  voice_service.py
backend-vps/demo/: style.css
demo/: index.html
docker/: Dockerfile.vps
examples/: main_v3turbo.py
server/: main.py
server/src/: __init__.py  config.py  controller.py  db.py  engine.py  schemas.py  storage.py
server/src/repositories/: __init__.py  jobs_repo.py  voices_repo.py
server/src/services/: __init__.py  catalog.py  cpu_onnx.py  createVoice.py  gpu_vastai.py  jobs.py  voices.py
server/src/services/gpu_job/: synth_job.py
server/vieneu/: factory.py  v3turbo.py
server/vieneu/_v3_turbo_engine/: onnx_runtime_lite.py
src/vieneu/: factory.py  v3turbo.py
src/vieneu/_v3_turbo_engine/: __init__.py  hub_load_v3_turbo.py  inference_v3_turbo.py  modeling_v3_turbo.py  onnx_runtime_lite.py
src/vieneu/assets/: voices_v3_turbo.json
src/vieneu/v3_turbo_serve/: batched_acoustic.py  engine.py
src/vieneu_api/: __init__.py  app.py  config.py  db.py  models.py
src/vieneu_api/api/: catalog.py  health.py  tts.py  voices.py
src/vieneu_api/schemas/: __init__.py
src/vieneu_api/services/: catalog_provider.py  jobs.py  model_client.py  tts_service.py  voices_service.py
src/vieneu_model_server/: __init__.py  jobs.py  storage.py
tests/: README.md  test_api_cpu.py  test_routing.py  test_vastai_flow.py
ui/: index.html
