[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vieneu-backend-vps"
version = "1.0.0"
description = "VieNeu-TTS backend-vps (CPU/logic tier) — public /api/v1, durable jobs, forwards synthesis to the GPU model-server."
readme = "README.md"
requires-python = ">=3.10"
# Torch-free by design: this tier holds NO model. It just serves the REST API,
# persists jobs in Postgres, and calls the model-server over HTTP.
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",  # multipart/form-data for voice audio upload
    "requests>=2.31",           # HTTP client to the model-server
    "sqlalchemy>=2.0",          # ORM for durable jobs
    "psycopg[binary]>=3.1",     # Postgres driver (sync)
    "pydantic>=2.0",
]

[project.scripts]
vieneu-api = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
